1.3 - Enhance:  Add customize page back to admin menu Update: Update bootstrap to 4.3.1 due to security vaunrability Fix: SVG code causing caching issue in mail icon Fix: Account Login in header not showing logged in link to account page

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -123,7 +123,8 @@
   }
 }
 
-.header-cart {
+.header-cart,
+.header-login {
   padding: 1rem;
 
   @include media-breakpoint-up(md) {
